# Avimitin

./: .bashrc  .gitconfig  .gitignore  .gitmodules  .gittemplate  .tmux.conf.min  .vimrc  FF7883E3BF6835DD.asc  Justfile  Makefile  README.md  chromium-flags.conf  dotfile.md  favicon_package_v0.16.zip.REMOVED.git-id  flake.nix  hm  index.html  makefile  output.gif.REMOVED.git-id  overlay.nix  picom.conf  pkglist.pacman  pkglist.paru  pubkey.asc  rcsums.txt  starship.toml  styles.css  update.sh  updrcsums.sh  vimrc
Rust/: futures.md  notes.md
Xresources/: everforest_dark.Xresources  github_light.Xresources  kanagawa_dark.Xresources  siduck.Xresources  st-settings.Xresources  tokionight.Xresources
alacritty/: alacritty.yml
alg/: notes.md
broot/: conf.hjson
dotfile/: .bashrc  .gitconfig  .inputrc  .tmux.conf  home.nix  homelab.nix  mimeapps.list  readme.md
dunst/: dunstrc
firefox-style/: treestyletab.css
fish/: .gitignore  config.fish  startup.fish
fontconfig/: fonts.conf
homepage/: Justfile  android-chrome-512x512.png.REMOVED.git-id  fix-layout-shift.lua  index.html  index.md  styles.css
hosts/: homelab.nix
i3/: config
i3blocks/: config
images/: screenshot.png.REMOVED.git-id
infra/rust/: Cargo.toml
infra/rust/.cargo/: config.toml
infra/rust/scripts/: install.sh
infra/rust/src/: assist.rs  http.rs  lib.rs
kitty/: kitty.conf
lazygit/: .gitignore  config.yml
lf/: kitty_preview  lfrc
ncspot/: config.toml
nix/: homelab.nix  lib.nix  myLib.nix  overlay.nix
notes/: 2024-02-28.md  2024-04-12.md  bt-server.md  chore.md  csapp.md  gpg.md  (+7 more)
(+225 files in other folders)
