[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

tokio = { version = "1.27", features = ["full"] }
tokio-stream = "0.1.12"
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.16"
indicatif = "0.17"

spdlog-rs = "0.3"

[[bin]]
name = "archrv_patch_dl"
path = "src/bin/archrv_patch_dl.rs"

[[bin]]
name = "oe_img_dl"
path = "src/bin/openeuler_img_dl.rs"

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
